~~~~~~~~~~~~~~~~~~

* Render `help_text` when set on `FieldPanel`, `MultiFieldPanel`, `FieldRowPanel`, and other panel APIs where it previously worked without official support (Matt Westcott)
* Update special-purpose `FieldPanel` deprecation message to add clarity for developers (Matt Westcott)
* Fix: Add back rendering of `help_text` for InlinePanel (Matt Westcott)

4.0.2 (23.09.2022)
~~~~~~~~~~~~~~~~~~

 * Update all images and sections of the Wagtail Editor's guide to align with the new admin interface changes from Wagtail 3.0 and 4.0 (Thibaud Colas)
 * Ensure all images in the documentation have a suitable alt text (Thibaud Colas)
 * Fix: Ensure tag autocompletion dropdown has a solid background (LB (Ben) Johnston)
 * Fix: Allow inline panels to be ordered (LB (Ben) Johnston)
 * Fix: Only show draft / live status tags on snippets that have `DraftStateMixin` applied (Sage Abdullah)
 * Fix: Prevent JS error when initialising chooser modals with no tabs (LB (Ben) Johnston)
 * Fix: Add missing vertical spacing between chooser modal header and body when there are no tabs (LB (Ben) Johnston)
 * Fix: Reinstate specific labels for chooser buttons (for example 'Choose another page', 'Edit this page' not 'Change', 'Edit') so that it is clearer for users and non-English translations (Matt Westcott)
 * Fix: Resolve issue where searches with a tag and a query param in the image listing would result in an `FilterFieldError` (Stefan Hammer)
 * Fix: Add missing vertical space between header and content in embed chooser modal (LB (Ben) Johnston)
 * Fix: Use the correct type scale for heading levels in rich text (Steven Steinwand)
 * Fix: Update alignment and reveal logic of fields’ comment buttons (Steven Steinwand)
 * Fix: Regression from Markdown conversion in documentation for API configuration - update to correctly use PEP-8 for example code (Storm Heg)
 * Fix: Prevent 'Delete' link on page edit view from redirecting back to the deleted page (LB (Ben) Johnston)